--- a/style.css
+++ b/style.css
@@ -40,6 +40,32 @@ background-color: rgb(91, 72, 105);
     padding: 30px;
     
 }
+@media only screen and (max-width: 700px) {
+    .profile img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        border: 5px solid rgb(208, 230, 132);
+        object-fit: cover;
+        transform:rotate(30deg)
+    }
+    .main-content{
+        display: block;
+
+    }
+    .profile{
+        display: flex;
+        flex-direction: column;
+       
+        align-items: center;
+
+    }
+    .profile img{
+ width: 200px !important;
+ height: 200px !important;
+
+    }
+  }
 .profile{
     width: 100%;
     border-bottom: 1px solid rgb(208, 230, 132);
@@ -121,7 +147,7 @@ padding: 30px;
 .project{
 background-color: gray;
 border-radius: 10px;
-width: 200px;
+width: 300px;
 height: 400px ;
 color: white;
 padding: 5px;
@@ -131,7 +157,7 @@ position: relative;
 
 .project>img{
     width: 100%;
-    max-height: 200px;
+    max-height: 300px;
     min-height: 200px;
 
     object-fit: cover;
