--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ padding: 30px;
 background-color: gray;
 border-radius: 10px;
 width: 300px;
-height: 400px ;
+height: 300px ;
 color: white;
 padding: 5px;
 position: relative;
@@ -188,4 +188,28 @@ right: 2px;
 .project__code:hover{
 color: rgb(223, 217, 217);
     
+    }
+
+    .new-project{
+        width:600px;
+        height: 600px ;
+    }
+
+    .projests__items2023{
+    flex-direction: column;
+      gap: 10px;
+      background-color: rgb(154, 222, 222);
+      width: 100%;
+      align-content: center;
+    }
+    .new-project>img{
+    
+        width: 100%;
+        max-height: 400px;
+        min-height: 450px;
+        object-fit: contain;
+    }
+
+    .games{
+        background-color: rgb(183, 133, 229);
     }
